	PR optimization/12180 	* tree-inline.c (inline_forbidden_p_1): Do not permit inlining of 	functions containing calls to

PR optimization/12180
	* gcc.dg/20031002-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@72057 138bc75d-0d04-0410-961f-82ee72b054a4