gcc/tree-inline.c
@@ -922,6 +922,8 @@ inline_forbidden_p_1 (tree *nodep, int *walk_subtrees ATTRIBUTE_UNUSED,
 	     arguments.  */
 	case BUILT_IN_VA_START:
 	case BUILT_IN_STDARG_START:
+	case BUILT_IN_NEXT_ARG:
+	case BUILT_IN_VA_END:
 	  {
 	    inline_forbidden_reason
 	      = N_("%Jfunction '%F' can never be inlined because it "
